--- a/public/css/global.less
+++ b/public/css/global.less
@@ -10,7 +10,7 @@
 // --------------------------------------------------
 
 // Import flat bootstrap theme
-@import "themes/flat/theme";
+@import "themes/skq/theme";
 
 body{
   padding-top: 70px;
