--- a/public/index.jade
+++ b/public/index.jade
@@ -1,6 +1,6 @@
 .container
     .jumbotron
-        h1 Congratulations
-        p Bootstrap boilerplate for Harp is successfully installed.
+        h1 Congratulations to you
+        p I review your application code in detail, offer advice on Sidekiq usage and potential problems, look for thread-safety issues or bottlenecks in your code and send you a report.
         p
             a.btn.btn-primary.btn-lg(href="#{baseUrl}/docs") View the documentation
