--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -1,16 +1,17 @@
 nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
-    .container-fluid
+    .container-fluid.skq-header
         .navbar-header
             button.navbar-toggle(data-toggle="collapse", data-target="#navbar-top-collapse-1")
                 span.sr-only Toggle navigation
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.navbar-brand(href="#{baseUrl}/")= name
+            a.skq.navbar-brand(href="#{baseUrl}/")= name
+        span.skq-tagline.navbar-brand.col-sm-5.hidden-xs Simple, efficient background processing for Ruby.
 
         .collapse.navbar-collapse#navbar-top-collapse-1
             ul.nav.navbar-nav.navbar-right
                 li
-                    a(href="#{baseUrl}/docs") Documentation
+                    a(href="#{baseUrl}/support") Support
                 li
-                    a(href="#{baseUrl}/showcase") Showcase
+                    a(href="#{baseUrl}/about") About
