--- a/public/css/themes/skq/theme.less
+++ b/public/css/themes/skq/theme.less
@@ -15,3 +15,32 @@
 
 // Theme specific styles come here and can use all Bootstrap
 // variables and mixins (if you included them)
+
+// New styles
+
+body{
+	min-width: @screen-xs;
+}
+
+.navbar {
+	border: none;
+}
+
+.skq-tagline{
+	font-family: @headings-font-family;
+	color: @gray-light !important;
+	margin-top: -0.2em;
+	max-width: 350px;
+}
+
+.navbar-right{
+	.skq-tagline();
+	text-transform: uppercase;
+	letter-spacing: .1em;
+	font-weight: 700;
+}
+
+.skq.navbar-brand {
+	font-size: (@font-size-h1 * 1.15);
+	color: @brand-primary;
+}
