more global styling, started on homepage content

--- a/public/_partials/footer.jade
+++ b/public/_partials/footer.jade
@@ -3,9 +3,13 @@
 		.col-sm-7
 			h3.skq-footer-brand
 				= name
-				img.skq-award(src="http://placehold.it/50x50")
+				a(href='http://rubyheroes.com/' target='_new')
+					img.skq-award(src='#{baseUrl}/img/hero-award.svg')
+				a(href='https://www.blackducksoftware.com/open-source-rookies/2012-recipients' target='_new')
+					img.skq-award(src='#{baseUrl}/img/rookie-award.png')
 		.col-xs-5 
-			img.skq-footer-logo(src="http://placehold.it/230x25")
+			a(href='http://contribsys.com/' target='_new')
+				img.skq-footer-logo(src='#{baseUrl}/img/cs-footer-logo.png')
 	hr
 	.row
 		.col-sm-2
