--- a/public/css/themes/skq/_variables.less
+++ b/public/css/themes/skq/_variables.less
@@ -18,7 +18,7 @@
 @gray-dark:              lighten(#000, 20%);   // #333
 @gray:                   lighten(#000, 33.5%); // #555
 @gray-light:             lighten(#000, 60%);   // #999
-@gray-lighter:           lighten(#000, 93.5%); // #eee
+@gray-lighter:           lighten(#000, 86.5%); // #ddd
 
 @brand-primary:         #b1003e;
 @brand-success:         #5cb85c;
@@ -32,7 +32,7 @@
 // ## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #fff;
+@body-bg:               #f2f2f2;
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
 
@@ -344,7 +344,7 @@
 @navbar-collapse-max-height:       340px;
 
 @navbar-default-color:             #777;
-@navbar-default-bg:                #f2f2f2;
+@navbar-default-bg:                #fff;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
