wip home and support page

--- a/public/_partials/footer.jade
+++ b/public/_partials/footer.jade
@@ -1,7 +1,7 @@
 .container-fluid
 	.row
 		.col-sm-7
-			h3.skq-footer-brand
+			.skq-footer-brand
 				= name
 				a(href='http://rubyheroes.com/' target='_new')
 					img.skq-award(src='#{baseUrl}/img/hero-award.svg')
