--- a/public/css/themes/skq/theme.less
+++ b/public/css/themes/skq/theme.less
@@ -26,6 +26,14 @@ body{
 	border: none;
 }
 
+.skq-white-bg {
+	width: 100%;
+	background-color: #fff;
+	margin: 0;
+	padding: @grid-gutter-width (@grid-gutter-width * 1.5);
+	padding-top: 0;
+}
+
 .skq-tagline{
 	font-family: @headings-font-family;
 	color: @gray-light !important;
@@ -44,3 +52,10 @@ body{
 	font-size: (@font-size-h1 * 1.15);
 	color: @brand-primary;
 }
+
+.no-margin{ 
+	margin: 0;
+	width: 100%;
+}
+
+.center-text{ text-align: center; }
