--- a/public/index.jade
+++ b/public/index.jade
@@ -7,8 +7,42 @@
       .skq-quoted
         <strong>Justin Mazzi</strong>, @jmazzi
         br
-        | Chief of Engineering, Site5.com
+        | Chief of Engineering, 
+        a(href='http://site5.com/' target='_new') Site5.com
 
   .row
     .col-sm-12
-      .jumbotron
+      h5 Trusted By
+      hr
+#client-carousel.client-carousel
+  ul.logo-list
+    li
+      img(src='#{baseUrl}/img/digitalocean.png')
+    li
+      img(src='#{baseUrl}/img/groupon.png')
+    li
+      img(src='#{baseUrl}/img/livingsocial.png')
+    li
+      img(src='#{baseUrl}/img/oracle.png')
+    li
+      img(src='#{baseUrl}/img/heroku.png')
+    li
+      img(src='#{baseUrl}/img/netflix.png')    
+    li
+      img(src='#{baseUrl}/img/condenast.png')
+    li
+      img(src='#{baseUrl}/img/adobe.png')
+    li
+      img(src='#{baseUrl}/img/kickstarter.png')  
+    li
+      img(src='#{baseUrl}/img/esri.png')  
+    li
+      img(src='#{baseUrl}/img/charitywater.png')
+    li
+      img(src='#{baseUrl}/img/watsi.png')
+    li
+      img(src='#{baseUrl}/img/customerio.png')
+    li
+      img(src='#{baseUrl}/img/zenpayroll.png')
+
+!= partial('_partials/subfooter')
