--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -1,6 +1,21 @@
 meta(charset='utf8')
 title= name
+
+meta(name='description' content='Simple, efficient message or background job processing for Ruby')
+meta(property='og:site_name' content='Sidekiq')
+meta(property='og:type' content='company')
+meta(property='og:title' content='Simple, efficient message processing for Ruby')
+meta(property='og:url' content='http://sidekiq.org')
+meta(property='og:image' content='http://sidekiq.org/img/logo.png')
+meta(property='og:description' content='Sidekiq is a simple, efficient system for message or background job processing')
+meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1')
+
 link(rel='stylesheet', href='#{baseUrl}/css/global.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Armata|Montserrat:400,700')
+link(rel='canonical' href='http://sidekiq.org/')
+link(rel='shortcut icon' type='image/png' href='/favicon.png')
+
 script(src='#{baseUrl}/js/jquery/jquery.min.js')
 script(src='#{baseUrl}/js/bootstrap/bootstrap.js')
+script(src='#{baseUrl}/js/scrollingcarousel.2.0.min.js')
+script(src='#{baseUrl}/js/skq-interactive.js')
