--- a/public/support.jade
+++ b/public/support.jade
@@ -1,5 +1,5 @@
 .container.skq-hero-area
-  .skq-hero-text.center-text Get support directly from the Sidekiq expert.
+  .skq-hero-text.text-center Get support directly from the Sidekiq expert.
 .container.no-margin
   .row.skq-cols
     .col-sm-4.skq-col-left 
@@ -7,7 +7,7 @@
       p Video chat about Sidekiq and ask questions.
       ul
         li 
-          span.glyphicon.glyphicon-tag
+          span.glyphicon.glyphicon-usd
           | FREE
         li 
           span.glyphicon.glyphicon-time
@@ -39,7 +39,9 @@
       h3 Custom Work or Support
       p Tweak Sidekiq to meet specific requirements.
       ul
-        
+        li 
+          span.glyphicon.glyphicon-usd
+          | $1500 / hour
         li 
           span.glyphicon.glyphicon-question-sign
           | More questions? See 
