--- a/public/_partials/header.jade
+++ b/public/_partials/header.jade
@@ -1,17 +1,20 @@
 nav.navbar.navbar-default.navbar-fixed-top(role="navigation")
-    .container-fluid.skq-header
-        .navbar-header
-            button.navbar-toggle(data-toggle="collapse", data-target="#navbar-top-collapse-1")
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-            a.skq.navbar-brand(href="#{baseUrl}/")= name
-        span.skq-tagline.navbar-brand.col-sm-5.hidden-xs Simple, efficient background processing for Ruby.
+  .container-fluid.skq-header
+    .navbar-header
+      button.navbar-toggle(data-toggle="collapse", data-target="#navbar-top-collapse-1")
+        span.sr-only Toggle navigation
+        span.icon-bar
+        span.icon-bar
+        span.icon-bar
+      a.skq.navbar-brand(href="#{baseUrl}/")= name
+    span.skq-tagline.navbar-brand.col-sm-5.hidden-xs 
+      | Simple, efficient background
+      br
+      | processing for Ruby.
 
-        .collapse.navbar-collapse#navbar-top-collapse-1
-            ul.nav.navbar-nav.navbar-right
-                li
-                    a(href="#{baseUrl}/support") Support
-                li
-                    a(href="#{baseUrl}/about") About
+    .collapse.navbar-collapse#navbar-top-collapse-1
+      ul.nav.navbar-nav.navbar-right
+        li
+          a.skq-nav-link(href="#{baseUrl}/support") Support
+        li
+          a.skq-nav-link(href="#{baseUrl}/about") About
