--- a/public/css/global.less
+++ b/public/css/global.less
@@ -22,6 +22,7 @@ body{
 .skq-header{
   padding: 0 (@grid-gutter-width * 1.25) 0;
   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  overflow: hidden;
 }
 
 // BODY
@@ -201,6 +202,37 @@ h5{
   li{ margin-top: .5em; }
 }
 
+.skq-contributors {
+  margin: (@grid-gutter-width) 0 (@grid-gutter-width * 3) 0;
+
+  .list-group-item {
+    max-width: 175px;
+    margin: 5px; 
+    padding: 10px;
+    font-family: @headings-font-family;
+
+    a { font-size: .8em; }
+
+    .name { 
+      white-space: nowrap;
+      display: inline-block;
+      padding-top: .5em;
+    }
+  }
+
+  .skq-contributor-img {
+    width: 153px;
+    height: 153px;
+    background-color: @gray-lighter;
+  }
+}
+
+img.icon{
+  width: 1.25em;
+  height: auto;
+  margin-right: .5em;
+}
+
 // FOOTER
 
 .skq-subfooter{
@@ -249,7 +281,7 @@ footer{
   .skq-footer-brand{
     font-size: 2em;
     font-family: @font-family-base;
-    color: @gray-darker;
+    color: @gray-dark;
   }
 
   .skq-footer-logo{
