wip navbar fixes css organization

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -25,6 +25,47 @@ body{
   overflow: hidden;
 }
 
+@media (max-width:@screen-xs){
+  .navbar-header {
+    width: 30%;
+  }
+  .skq {
+    // transform: scale(0.5,0.5);
+  }
+}
+
+.skq-tagline{
+  white-space: nowrap;
+  font-family: @headings-font-family;
+  color: @gray-light !important;
+  line-height: 1.25em;
+  margin-top: -0.8em;
+  max-width: 350px;
+}
+
+.nav-mini {
+  transition: background-color 250 ease-in-out;
+  -webkit-transition: background-color 250 ease-in-out;
+  background-color: rgba(255, 255, 255, 0.95);
+  height: 50px;
+}
+
+.skq-nav-link {
+  margin-top: 0.8em;
+}
+
+.navbar-right{
+  .skq-tagline();
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  font-weight: 700;
+}
+
+.skq.navbar-brand {
+  font-size: 47px;
+  color: @brand-primary;
+}
+
 // BODY
 
 .skq-hero-area{
@@ -250,6 +291,8 @@ img.icon{
     border: 2px solid @brand-primary;
     color: @brand-primary;
   }
+
+  h4 { line-height: 2em; }
 }
 
 footer{
