--- a/public/css/themes/skq/_variables.less
+++ b/public/css/themes/skq/_variables.less
@@ -306,7 +306,7 @@
 @grid-gutter-width:         30px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
-@grid-float-breakpoint:     @screen-sm-min;
+@grid-float-breakpoint:     (@screen-xs-min - @screen-xs);
 //** Point at which the navbar begins collapsing.
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
 
