--- a/public/support.jade
+++ b/public/support.jade
@@ -52,6 +52,7 @@
           a(href='mailto:mike@contribsys.com?subject=Sidekiq%20Custom%20Work%20or%20Support' type='button') Email to discuss details
 
 .container.skq-white-bg#faqs
+  .spacer
   h5 FAQs
   hr
   .row
@@ -74,7 +75,7 @@
         li Give you an estimate of time and price if the work is straightforward
         li Suggest alternatives that might not require Sidekiq
         li Decline the work due to timing or relevancy
-        li Note that work must be Sidekiq related. I don't accept general Rails or Ruby development work. My contracting price is $250/hour or $1500/day.
+      p Note that work must be Sidekiq related. I don't accept general Rails or Ruby development work. My contracting price is <strong>$250/hour</strong> or <strong>$1500/day</strong>.
       h3 Who are you?
       p I'm Mike Perham, I've been doing Ruby and Rails development for 8 years and I'm the primary author of Sidekiq. For the past few years I've helped thousands of people with their Sidekiq issues. Sales of Sidekiq Pro and these support services feed my family.
 
