--- a/public/_partials/footer.jade
+++ b/public/_partials/footer.jade
@@ -13,14 +13,20 @@
 	hr
 	.row
 		.col-sm-2
-			a(href='#{baseUrl}/support') Support
+			a(href='https://github.com/mperham/sidekiq/' target='_new') OSS
 			br
-			a(href='https://github.com/mperham/sidekiq/wiki' target='_new') Wiki
+			a(href='#{baseUrl}/products/pro') Pro
+			br
+			a(href='#{baseUrl}/products/enterprise') Enterprise
 		.col-sm-2
-			a(href='#{baseUrl}/about') About
+			a(href='https://github.com/mperham/sidekiq/wiki' target='_new') Wiki
+			br
+			a(href='#{baseUrl}/support') Support
 			br
 			a(href='https://github.com/mperham/sidekiq/' target='_new') Source
 		.col-sm-3
+			a(href='#{baseUrl}/about') About
+			br
 			a(href='https://twitter.com/sidekiq' target='_new') On Twitter
 			br
 			a(href='http://confreaks.com/videos/1290-rubyconf2012-asynchronous-processing-for-fun-and-profit' target='_new') At Rubyconf 2012
