--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -8,7 +8,7 @@ meta(property='og:title' content='Simple, efficient message processing for Ruby'
 meta(property='og:url' content='http://sidekiq.org')
 meta(property='og:image' content='http://sidekiq.org/img/logo.png')
 meta(property='og:description' content='Sidekiq is a simple, efficient system for message or background job processing')
-meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1')
+meta(name='viewport' content='width=device-width, initial-scale=1.0')
 
 link(rel='stylesheet', href='#{baseUrl}/css/global.css')
 link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Armata|Montserrat:400,700')
