--- a/public/css/themes/skq/theme.less
+++ b/public/css/themes/skq/theme.less
@@ -22,6 +22,10 @@ body{
 	min-width: @screen-xs;
 }
 
+code {
+  font-weight: bold;
+}
+
 .navbar {
 	border: none;
 }
@@ -34,7 +38,12 @@ body{
 	padding-top: 0;
 }
 
-.no-margin{ 
+.no-margin { 
 	margin: 0;
 	width: 100%;
+}
+
+.no-padding {
+  padding-left: 0;
+  padding-right: 0;
 }
