homepage interactive wip

--- a/public/_partials/footer.jade
+++ b/public/_partials/footer.jade
@@ -2,7 +2,7 @@
 	.row
 		.col-sm-7
 			.skq-footer-brand
-				= name
+				| Sidekiq
 				a(href='http://rubyheroes.com/' target='_new')
 					img.skq-award(src='#{baseUrl}/img/hero-award.svg')
 				a(href='https://www.blackducksoftware.com/open-source-rookies/2012-recipients' target='_new')
