--- a/public/_partials/logo-carousel.jade
+++ b/public/_partials/logo-carousel.jade
@@ -1,4 +1,4 @@
-#client-carousel.client-carousel
+#logo-carousel.logo-carousel
   ul.logo-list
     li
       img(src='#{baseUrl}/img/digitalocean.png')
