--- a/public/_partials/head.jade
+++ b/public/_partials/head.jade
@@ -18,4 +18,5 @@ link(rel='shortcut icon' type='image/png' href='/favicon.png')
 script(src='#{baseUrl}/js/jquery/jquery.min.js')
 script(src='#{baseUrl}/js/bootstrap/bootstrap.js')
 script(src='#{baseUrl}/js/scrollingcarousel.2.0.min.js')
-script(src='#{baseUrl}/js/skq-interactive.js')
+script(src='#{baseUrl}/js/skq-global.js')
+script(src='#{baseUrl}/js/#{javascript}.js')
