--- a/public/css/themes/skq/theme.less
+++ b/public/css/themes/skq/theme.less
@@ -22,12 +22,21 @@ body{
 	min-width: @screen-xs;
 }
 
+main {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 code {
   font-weight: bold;
 }
 
 .navbar {
 	border: none;
+}
+
+.row {
+  // margin-right: 0;
 }
 
 .skq-white-bg {
@@ -46,4 +55,14 @@ code {
 .no-padding {
   padding-left: 0;
   padding-right: 0;
+}
+
+.btn-primary {
+  padding: 1.25em 2em;
+  border-radius: 4px;
+  font-size: 1em;
+  font-family: @headings-font-family;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: .1em;
 }
